# docs/swagger.yaml
@@ -264,14 +264,179 @@ info:
   version: 1.0.0
 openapi: 3.0.2
 paths:
-  /api/v1/analysis/interests/comments:
+  /api/v1/analysis/preparer/sentiments/commentators:
+    get:
+      description: "\u0412\u044B\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F \u043F\
+        \u043E\u0434\u0433\u043E\u0442\u043E\u0432\u043A\u0438 \u0430\u043D\u0430\u043B\
+        \u0438\u0437\u0430 \u043D\u0430\u0441\u0442\u0440\u043E\u0435\u043D\u0438\u0439\
+        \ \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0442\u043E\u0440\u043E\
+        \u0432"
+      operationId: sentiment_analysis_commentators_preparer_api_v1_analysis_preparer_sentiments_commentators_get
+      parameters:
+      - in: query
+        name: version_mark
+        required: false
+        schema:
+          default: v1
+          title: Version Mark
+          type: string
+      - in: query
+        name: is_override
+        required: false
+        schema:
+          default: false
+          title: Is Override
+          type: boolean
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CasTask'
+          description: Successful Response
+        '422':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+          description: Validation Error
+      security:
+      - Cas API Key: []
+      summary: Sentiment analysis commentators preparer
+      tags:
+      - analysis_sentiments
+  /api/v1/analysis/preparer/sentiments/reviewers:
+    get:
+      description: "\u0412\u044B\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F \u043F\
+        \u043E\u0434\u0433\u043E\u0442\u043E\u0432\u043A\u0438 \u0430\u043D\u0430\u043B\
+        \u0438\u0437\u0430 \u043D\u0430\u0441\u0442\u0440\u043E\u0435\u043D\u0438\u0439\
+        \ \u0440\u0435\u0432\u044C\u044E\u0435\u0440\u043E\u0432"
+      operationId: sentiment_analysis_reviewers_preparer_api_v1_analysis_preparer_sentiments_reviewers_get
+      parameters:
+      - in: query
+        name: version_mark
+        required: false
+        schema:
+          default: v1
+          title: Version Mark
+          type: string
+      - in: query
+        name: is_override
+        required: false
+        schema:
+          default: false
+          title: Is Override
+          type: boolean
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CasTask'
+          description: Successful Response
+        '422':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+          description: Validation Error
+      security:
+      - Cas API Key: []
+      summary: Sentiment analysis reviewers preparer
+      tags:
+      - analysis_sentiments
+  /api/v1/analysis/preparer/similarity/customers:
+    get:
+      description: "\u0412\u044B\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F \u043F\
+        \u043E\u0434\u0433\u043E\u0442\u043E\u0432\u043A\u0438 \u0430\u043D\u0430\u043B\
+        \u0438\u0437\u0430 \u0441\u0445\u043E\u0434\u0441\u0442\u0432\u0430 \u043E\
+        \u0442\u0437\u044B\u0432\u043E\u0432 / \u043A\u043E\u043C\u043C\u0435\u043D\
+        \u0442\u0430\u0440\u0438\u0435\u0432 \u043A\u043B\u0438\u0435\u043D\u0442\u043E\
+        \u0432"
+      operationId: similarity_analysis_products_preparer_api_v1_analysis_preparer_similarity_customers_get
+      parameters:
+      - in: query
+        name: version_mark
+        required: false
+        schema:
+          default: v1
+          title: Version Mark
+          type: string
+      - in: query
+        name: is_override
+        required: false
+        schema:
+          default: false
+          title: Is Override
+          type: boolean
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CasTask'
+          description: Successful Response
+        '422':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+          description: Validation Error
+      security:
+      - Cas API Key: []
+      summary: Similarity analysis customers preparer
+      tags:
+      - analysis_similarity
+  /api/v1/analysis/preparer/similarity/products:
+    get:
+      description: "\u0412\u044B\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F \u043F\
+        \u043E\u0434\u0433\u043E\u0442\u043E\u0432\u043A\u0438 \u0430\u043D\u0430\u043B\
+        \u0438\u0437\u0430 \u0441\u0445\u043E\u0434\u0441\u0442\u0432\u0430 \u043E\
+        \u0442\u0437\u044B\u0432\u043E\u0432 / \u043A\u043E\u043C\u043C\u0435\u043D\
+        \u0442\u0430\u0440\u0438\u0435\u0432 \u043F\u0440\u043E\u0434\u0443\u043A\u0442\
+        \u043E\u0432"
+      operationId: similarity_analysis_products_preparer_api_v1_analysis_preparer_similarity_products_get
+      parameters:
+      - in: query
+        name: version_mark
+        required: false
+        schema:
+          default: v1
+          title: Version Mark
+          type: string
+      - in: query
+        name: is_override
+        required: false
+        schema:
+          default: false
+          title: Is Override
+          type: boolean
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CasTask'
+          description: Successful Response
+        '422':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+          description: Validation Error
+      security:
+      - Cas API Key: []
+      summary: Similarity analysis products preparer
+      tags:
+      - analysis_similarity
+  /api/v1/analysis/provider/interests/comments:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0433\u0440\u0443\
         \u043F\u043F\u0438\u0440\u043E\u0432\u043A\u0443 \u043F\u043E \u0432\u0441\
         \u0435\u043C \u0438\u043D\u0442\u0435\u0440\u0435\u0441\u0430\u043C \u043A\
         \u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0442\u043E\u0440\u043E\u0432 \u043F\
         \u0440\u043E\u0434\u0443\u043A\u0442\u0430."
-      operationId: customer_interest_comments_api_v1_analysis_interests_comments_get
+      operationId: customer_interest_comments_api_v1_analysis_provider_interests_comments_get
       parameters:
       - in: query
         name: product_name_id
@@ -297,14 +462,14 @@ paths:
       summary: Commentators interests
       tags:
       - analysis_interests
-  /api/v1/analysis/interests/reviews:
+  /api/v1/analysis/provider/interests/reviews:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0433\u0440\u0443\
         \u043F\u043F\u0438\u0440\u043E\u0432\u043A\u0443 \u043F\u043E \u0432\u0441\
         \u0435\u043C \u0438\u043D\u0442\u0435\u0440\u0435\u0441\u0430\u043C \u0440\
         \u0435\u0432\u044C\u044E\u0435\u0440\u043E\u0432 \u043F\u0440\u043E\u0434\u0443\
         \u043A\u0442\u0430."
-      operationId: customer_interests_reviews_api_v1_analysis_interests_reviews_get
+      operationId: customer_interests_reviews_api_v1_analysis_provider_interests_reviews_get
       parameters:
       - in: query
         name: product_name_id
@@ -330,7 +495,7 @@ paths:
       summary: Reviewers interests
       tags:
       - analysis_interests
-  /api/v1/analysis/sentiments/comments/category:
+  /api/v1/analysis/provider/sentiments/comments/category:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u0435\u043D\
         \u0442\u0438\u043C\u0435\u043D\u0442 \u0430\u043D\u0430\u043B\u0438\u0437\
@@ -338,7 +503,7 @@ paths:
         \u0432 \u043F\u0440\u043E\u0434\u0443\u043A\u0442\u0430 \u0441\u0433\u0440\
         \u0443\u043F\u043F\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u044B\u0439 \u043F\
         \u043E \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F\u043C"
-      operationId: customer_sentiment_comments_category_api_v1_analysis_sentiments_comments_category_get
+      operationId: customer_sentiment_comments_category_api_v1_analysis_provider_sentiments_comments_category_get
       parameters:
       - in: query
         name: product_name_id
@@ -364,7 +529,7 @@ paths:
       summary: Commentators sentiments by category
       tags:
       - analysis_sentiments
-  /api/v1/analysis/sentiments/comments/region:
+  /api/v1/analysis/provider/sentiments/comments/region:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u0435\u043D\
         \u0442\u0438\u043C\u0435\u043D\u0442 \u0430\u043D\u0430\u043B\u0438\u0437\
@@ -372,7 +537,7 @@ paths:
         \u0432 \u043F\u0440\u043E\u0434\u0443\u043A\u0442\u0430 \u0441\u0433\u0440\
         \u0443\u043F\u043F\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u044B\u0439 \u043F\
         \u043E \u0440\u0435\u0433\u0438\u043E\u043D\u0430\u043C"
-      operationId: customer_sentiment_comments_region_api_v1_analysis_sentiments_comments_region_get
+      operationId: customer_sentiment_comments_region_api_v1_analysis_provider_sentiments_comments_region_get
       parameters:
       - in: query
         name: product_name_id
@@ -398,7 +563,7 @@ paths:
       summary: Commentators sentiments by region
       tags:
       - analysis_sentiments
-  /api/v1/analysis/sentiments/reviews/category:
+  /api/v1/analysis/provider/sentiments/reviews/category:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u0435\u043D\
         \u0442\u0438\u043C\u0435\u043D\u0442 \u0430\u043D\u0430\u043B\u0438\u0437\
@@ -406,7 +571,7 @@ paths:
         \u0434\u0443\u043A\u0442\u0430 \u0441\u0433\u0440\u0443\u043F\u043F\u0438\u0440\
         \u043E\u0432\u0430\u043D\u043D\u044B\u0439 \u043F\u043E \u043A\u0430\u0442\
         \u0435\u0433\u043E\u0440\u0438\u044F\u043C"
-      operationId: customer_sentiment_reviews_category_api_v1_analysis_sentiments_reviews_category_get
+      operationId: customer_sentiment_reviews_category_api_v1_analysis_provider_sentiments_reviews_category_get
       parameters:
       - in: query
         name: product_name_id
@@ -432,7 +597,7 @@ paths:
       summary: Reviewers sentiments by category
       tags:
       - analysis_sentiments
-  /api/v1/analysis/sentiments/reviews/region:
+  /api/v1/analysis/provider/sentiments/reviews/region:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u0435\u043D\
         \u0442\u0438\u043C\u0435\u043D\u0442 \u0430\u043D\u0430\u043B\u0438\u0437\
@@ -440,7 +605,7 @@ paths:
         \u0434\u0443\u043A\u0442\u0430 \u0441\u0433\u0440\u0443\u043F\u043F\u0438\u0440\
         \u043E\u0432\u0430\u043D\u043D\u044B\u0439 \u043F\u043E \u0440\u0435\u0433\
         \u0438\u043E\u043D\u0430\u043C"
-      operationId: customer_sentiment_reviews_region_api_v1_analysis_sentiments_reviews_region_get
+      operationId: customer_sentiment_reviews_region_api_v1_analysis_provider_sentiments_reviews_region_get
       parameters:
       - in: query
         name: product_name_id
@@ -466,7 +631,7 @@ paths:
       summary: Reviewers sentiments by region
       tags:
       - analysis_sentiments
-  /api/v1/analysis/similarity/comments/reputation:
+  /api/v1/analysis/provider/similarity/comments/reputation:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0430\u043D\u0430\
         \u043B\u0438\u0437 \u0441\u0445\u043E\u0436\u0435\u0441\u0442\u0438 \u043E\
@@ -474,7 +639,7 @@ paths:
         \ \u043A\u043B\u0438\u0435\u043D\u0442\u0430 \u0441\u043E \u0437\u043D\u0430\
         \u0447\u0435\u043D\u0438\u0435\u043C \u0440\u0435\u043F\u0443\u0442\u0430\u0446\
         \u0438\u0438."
-      operationId: get_customer_similarity_analysis_product_by_comments_api_v1_analysis_similarity_comments_reputation_get
+      operationId: get_customer_similarity_analysis_product_by_comments_api_v1_analysis_provider_similarity_comments_reputation_get
       parameters:
       - in: query
         name: product_name_id
@@ -500,7 +665,7 @@ paths:
       summary: Similarity comments customer analysis by product
       tags:
       - analysis_similarity
-  /api/v1/analysis/similarity/reviews/reputation:
+  /api/v1/analysis/provider/similarity/reviews/reputation:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0430\u043D\u0430\
         \u043B\u0438\u0437 \u0441\u0445\u043E\u0436\u0435\u0441\u0442\u0438 \u043E\
@@ -508,7 +673,7 @@ paths:
         \ \u043A\u043B\u0438\u0435\u043D\u0442\u0430 \u0441\u043E \u0437\u043D\u0430\
         \u0447\u0435\u043D\u0438\u0435\u043C \u0440\u0435\u043F\u0443\u0442\u0430\u0446\
         \u0438\u0438."
-      operationId: get_customer_similarity_analysis_product_by_reviews_api_v1_analysis_similarity_reviews_reputation_get
+      operationId: get_customer_similarity_analysis_product_by_reviews_api_v1_analysis_provider_similarity_reviews_reputation_get
       parameters:
       - in: query
         name: product_name_id
